<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mytv_tips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dip"
        android:layout_marginLeft="18dip"
        android:textSize="14sp"
        android:text="@string/mytv_tips"
        />
    <EditText
        android:id="@+id/et_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/myet_hits"
        android:layout_marginTop="7dip"
        android:layout_marginLeft="15dip"
        />
    <CheckBox 
        android:id="@+id/cb_savemsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dip"
        android:layout_marginLeft="15dip"
        android:text="@string/mycb_tips"
        />
    <Button 
        android:id="@+id/btn_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:layout_marginTop="7dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        />
</LinearLayout>